@@ -1,7 +1,10 @@
 stunnel4 (3:4.20-3) unstable; urgency=low
 
+  * Adpot package (closes: #416955).
   * Manage patches to upstream source with quilt.
   * Use less cmd line args to debhelper commands in debian/rules.
+  * Ship upstream Changelog (Closes: #419842).
+  * Do not compress StunnelConf-0.1.pl (Closes: #432304).
 
  --
 
